--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.14.1",
+    "bcrypt-ts": "^5.0.2",
     "compression": "^1.7.4",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
