Integrate with PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Copy this file into ".env.production.local" and ".env.development.local"
 PORT=
+FOO_COOKIE_SECRET=
 
 # https://node-postgres.com/features/connecting#environment-variables
 PGHOST=
