--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/compression": "^1.7.5",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/ejs": "^3.1.5",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
@@ -47,6 +48,7 @@
     "@dotenvx/dotenvx": "^1.14.1",
     "bcrypt-ts": "^5.0.2",
     "compression": "^1.7.4",
+    "connect-pg-simple": "^10.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
